--- a/manifest.json
+++ b/manifest.json
@@ -41,6 +41,15 @@
                 },
                 "example": "/domoticz",
                 "default": "/domoticz"
+            },
+            {
+                "name": "is_public",
+                "type": "boolean",
+                "ask": {
+                    "en": "Is it a public application?",
+                    "fr": "Est-ce une application publique ?"
+                },
+                "default": true
             }
         ]
     }
